--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import { GoogleAnalytics } from 'astro-google-analytics';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
@@ -30,6 +31,7 @@ const {
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     
+    <GoogleAnalytics id="G-VV80HGXKT0" />
     <title>{title} | Hacca's engineering memo</title>
   </head>
   <body>
